--- a/Projeto_01/style.css
+++ b/Projeto_01/style.css
@@ -108,7 +108,7 @@ header {
         ". slider .",
         ". promotions .",
         ". best_sellers .",
-        "";
+        ". all_items .";
     grid-template-rows: auto;
 }
 
@@ -161,7 +161,7 @@ header {
         font-family: 'Montserrat', sans-serif; 
     }
 
-    #promotions, #best_sellers {
+    #promotions, #best_sellers, #all_items {
         position: relative;
         display: flex;
         flex-wrap: wrap;
@@ -169,6 +169,68 @@ header {
         flex: none;
 
     }
+    
+    .card {
+        position: relative;
+        background-color: rgb(247, 243, 243);
+        border-radius: 1rem;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);    
+        transition: 0.3s;
+        cursor: pointer;
+    }
+
+    .card:hover {
+        transition: 0.3s;
+        background-color: rgb(193, 238, 217);
+    }
+
+    .card #sales_reviews {
+        position: relative;
+        margin-left: 0.3rem;
+    }
+
+    .card #oldPrice {
+        text-decoration: line-through;
+        color: rgb(238, 60, 60);
+        margin-left: 0.3rem;
+    }
+
+    .card #price {
+        text-transform: bold;
+        color: green;
+        font-weight: bold;
+        margin-left: 0.3rem;
+    }
+
+    .card #discount {
+        color: green;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .card #discount_percentage {
+        position: relative;
+        padding: 0.1rem;
+        top: -6px;
+    }
+
+    .card h4 {
+        margin: 0.3rem;
+    }
+
+    .card #add_cart {
+        display: flex;
+        border: none;
+        background-color: red;
+        padding: 1rem;
+        width: 70%;
+        text-align: center;
+        justify-content: center;
+        margin: 0 auto;
+        top: 10px;
+        border-radius: 2rem;
+    }
+
 
 
 footer {
