--- a/Projeto_01/style.css
+++ b/Projeto_01/style.css
@@ -218,7 +218,35 @@ header {
         margin: 0.3rem;
     }
 
-    .card #add_cart {
+    #screen .searched_card {
+        display: grid;
+        grid-template-areas: 
+        'searched_image searched_values';
+        grid-template-columns: 70% 30%;
+        grid-template-rows: auto;
+        height: 100%;
+        align-items: center;
+    }
+    #screen .card {
+        background-color: red;
+        display: flex;
+    }
+
+    #screen .searched_image {
+        grid-area: searched_image;
+        display: flex;
+        margin: 0 auto;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        width: 80%;
+        background-color: red;
+    }
+
+    #screen .searched_values {
+        grid-area: searched_values;
+    }
+    /* .card #add_cart {
         display: flex;
         border: none;
         background-color: red;
@@ -229,7 +257,7 @@ header {
         margin: 0 auto;
         top: 10px;
         border-radius: 2rem;
-    }
+    } */
 
 
 
