--- a/Projeto_01/style.css
+++ b/Projeto_01/style.css
@@ -8,7 +8,7 @@
 .container {
     display: grid;
     grid-template-columns: 0.5fr 1.5fr 0.5fr;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 15vh auto auto;
     grid-template-areas: 
         "header header header"
         "main main main"
@@ -34,13 +34,19 @@ header {
 
     .header_n1 img {
         align-items: center;
-        border-radius: 1.5rem;
+        border-radius: 50%;
         cursor: pointer;
-        padding: 1rem;
-        width: 100px;
+        padding: 1vw;
+        width: 6vw;
         height: auto;
         padding: 0;
-        margin: 0.5rem;
+        margin: 0.5vw;
+        margin-top: 1.5vw;
+    }
+
+    .header_n1 img:hover {
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        border: none;
     }
 
     .header_n2 {
@@ -72,21 +78,21 @@ header {
 
         #search_button_span {
             border: none;
-            width: 10%;
-            font-size: 2em;
+            width: 4vw;
             cursor: pointer;
+            font-size: 0;
         }
 
         #search_button_span:hover {
             color: white;
             background-color: #be2f3e;
-            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
         }
 
         #search_bar_input {
-            border-top-left-radius: 1rem;
-            border-bottom-left-radius: 1rem;
+            border-top-left-radius: 1vw;
+            border-bottom-left-radius: 1vw;
             width: 50vw; 
 	        height: 6.5vh;
             cursor: pointer;
@@ -98,8 +104,7 @@ header {
 
         #search_bar_input:hover {
             border: none;
-            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
         }
 
     body > div > header > div.header_n3 {
@@ -107,7 +112,7 @@ header {
         align-items: center;
         text-align: center;
         justify-content: center;
-        font-size: 1.2rem;
+        font-size: 1.2vw;
     }
 
     body > div > header > div.header_n3 i {
@@ -118,12 +123,12 @@ header {
         grid-area: header_n3;
     }
     .header_n3 #welcome {
-        margin: 1.5rem;
-        padding-right: 1rem;
+        margin: 1.5vw;
+        padding-right: 1vw;
     }
     .header_n3 span {
-        font-size: 2rem;
-        padding: 2rem;
+        font-size: 2vw;
+        padding: 2vw;
         cursor: pointer;
         text-align: left;
         justify-content: left;
@@ -135,8 +140,7 @@ header {
         .header_n3 span:hover {
             background-color: #be2f3e;
             color: white;
-            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-        }
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;        }
 
 .main {
     grid-area: main;
@@ -150,8 +154,8 @@ header {
 }
 
     .slider {
-        height: 500px;
-        width: 1000px;
+        height: 50vh;
+        width: 80vw;
         margin: 0 auto;
         display: flex;
         display: flex;
@@ -159,41 +163,45 @@ header {
     }
 
         .slide {
-            position: relative;
-            align-items: center;
+            /* position: relative;
+            align-items: center; */
             display: flex;
             width: 100%;
             height: 100%;
+            margin-top: 10vh;
         }
 
             .slide > #next_button, #previous_button {
                 position: absolute;
                 cursor: pointer;
-                font-size: 4rem;
+                font-size: 4vw;
                 background-color: white(228, 215, 215);
                 color: red;
                 border-radius: 50%;
-                justify-content: space-between;
+                top: 40vh;
+            }
+
+            .slide > #next_button {
+                position: absolute;
+                left: 85.5vw;
             }
 
             .slide > #next_button:hover, #previous_button:hover {
                 background-color: rgb(240, 215, 215);
             }
-            
-            .slide > #next_button {
-            margin-left: 936px;
-            }
 
 
                 #slider_image img {
                     margin: 0 auto;
-                    height: 400px;
-                    width: 1000px;
+                    height: 100%;
+                    width: 100%;
                 }
 
 
     body > div > div > h1 {
-        padding: 2rem;
+        font-size: 2.5vw;
+        padding: 2vw;
+        margin: 2vw;
         font-family: 'Montserrat', sans-serif; 
     }
 
@@ -209,7 +217,7 @@ header {
     .card {
         position: relative;
         background-color: rgb(247, 243, 243);
-        border-radius: 1rem;
+        border-radius: 1vw;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);    
         transition: 0.3s;
         cursor: pointer;
@@ -222,20 +230,20 @@ header {
 
     .card .sales_reviews {
         position: relative;
-        margin-left: 0.3rem;
+        margin-left: 0.3vw;
     }
 
     .card .oldPrice {
         text-decoration: line-through;
         color: rgb(238, 60, 60);
-        margin-left: 0.3rem;
+        margin-left: 0.3vw;
     }
 
     .card .price {
         text-transform: bold;
         color: green;
         font-weight: bold;
-        margin-left: 0.3rem;
+        margin-left: 0.3vw;
     }
 
     .card .values {
@@ -246,12 +254,12 @@ header {
 
     .card .discount_percentage {
         position: relative;
-        padding: 0.1rem;
+        padding: 0.1vw;
         top: -6px;
     }
 
     .card h4 {
-        margin: 0.3rem;
+        margin: 0.3vw;
     }
 
     #screen .searched_card {
@@ -269,8 +277,9 @@ header {
 
     #screen .searched_values {
         grid-area: searched_values;
+        font-size: 1.5vw;
         text-align: center;
-        padding: 1rem;
+        padding: 1vw;
         
     }
 
@@ -278,29 +287,36 @@ header {
         display: flex;
         position: absolute;
         top: 0%;
-        padding: 1rem;
+        padding: 1vw;
     }
     
     #screen .searched_oldPrice {
         color: red;
         text-decoration: line-through;
     }
+
+    #screen .searched_discount_percentage {
+        position: relative;
+        padding: 0.1vw;
+        top: -3px;
+    }
     
-    #screen .searched_price {
+    #screen .searched_price, .searched_discount_percentage, span {
         color: green;
     }
 
     #screen .searched_sales_reviews {
-        position: relative;
-        padding: 1rem;
-        margin: auto;
+        position: absolute;
+        padding: 1vw;
+        top: 10%;
+        right: 4%;
     }
 
     #screen #clicked_screen_buttons {
         display: block;
         position: absolute;
         bottom: 0%;
-        padding: 1rem;
+        padding: 1vw;
     }
 
     #screen #add_cart_clicked_screen_button {
@@ -308,26 +324,26 @@ header {
         border: none;
         color: white;
         width: 100%;
-        padding: 1rem;
-        margin-bottom: 1rem;
-        border-radius: 2rem;
+        padding: 1vw;
+        margin-bottom: 1vw;
+        border-radius: 2vw;
+        font-size: 1vw;
     }
     #screen #add_cart_clicked_screen_button:hover {
         cursor: pointer;
         background-color: #4ce3ee;
         color: black;
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
-    }
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;    }
 
     #screen #skip_clicked_screen_button{
         width: 100%;
-        margin-top: 1rem;
-        padding: 1rem;
-        border-radius: 2rem;
+        margin-top: 1vw;
+        padding: 1vw;
+        border-radius: 2vw;
         background-color: #be2f3e;
         border: none;
         color: white;
+        font-size: 1vw; 
     }
 
     #screen #skip_clicked_screen_button:hover {
@@ -345,6 +361,7 @@ header {
         text-align: center;
         justify-content: center;
         width: 80%;
+        height: auto;
     }
 
     
@@ -355,7 +372,7 @@ header {
 footer {
     grid-area: footer;
     display: inline-flex;
-    padding: 1.2rem;
+    padding: 1.2vw;
     justify-content: center;
 
 }
@@ -366,11 +383,11 @@ footer {
     }
 
     footer ul li {
-        font-size: 1em;
-        margin-left: 5rem;
-        margin-right: 5rem;
+        font-size: 1vw;
+        margin-left: 5vw;
+        margin-right: 5vw;
         list-style-type: none;
-        padding: 0.2rem;
+        padding: 0.2vw;
     }
 
         footer ul li#subtitle {
