--- a/Projeto_01/style.css
+++ b/Projeto_01/style.css
@@ -100,6 +100,7 @@ header {
             justify-content: center;
             border: none;
             outline: none;
+            padding: 0.3vw;
         }
 
         #search_bar_input:hover {
@@ -149,7 +150,8 @@ header {
         ". slider .",
         ". promotions .",
         ". best_sellers .",
-        ". all_items .";
+        ". all_items .",
+        ". cart_items .";
     grid-template-rows: auto;
 }
 
@@ -205,7 +207,7 @@ header {
         font-family: 'Montserrat', sans-serif; 
     }
 
-    #promotions, #best_sellers, #all_items {
+    #promotions, #best_sellers, #all_items, #cart_items {
         position: relative;
         display: flex;
         flex-wrap: wrap;
@@ -221,6 +223,7 @@ header {
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);    
         transition: 0.3s;
         cursor: pointer;
+        width: auto;
     }
 
     .card:hover {
