--- a/Projeto_01/style.css
+++ b/Projeto_01/style.css
@@ -162,6 +162,7 @@ header {
         display: flex;
         display: flex;
         align-items: center;
+        margin-top: 5vh;
     }
 
         .slide {
@@ -170,7 +171,6 @@ header {
             display: flex;
             width: 100%;
             height: 100%;
-            margin-top: 10vh;
         }
 
             .slide > #next_button, #previous_button {
@@ -200,7 +200,7 @@ header {
                 }
 
 
-    body > div > div > h1 {
+    body > div > div > h1, #promotions_title {
         font-size: 2.5vw;
         padding: 2vw;
         margin: 2vw;
