--- a/Projeto_01/login.css
+++ b/Projeto_01/login.css
@@ -5,8 +5,9 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif; 
     font-size: 12px;
-    background-color: #201b2c;
-    color: #77ffc0;
+    background-color: white;
+    color: rgb(56, 50, 50);
+    font-weight: bold;
 }
 
 .container {
@@ -26,7 +27,6 @@
     align-items: center;
     width: 100%;
     height: 100%;
-
 }
 
 .login_inputs {
@@ -51,15 +51,14 @@
     padding-bottom: 1rem;
     margin-top: 2rem;
     margin-left: 2rem;
-    background-color: #77ffc0;;
+    background-color: #77ffc0;
     color: black;
     text-transform: uppercase;
-    font-weight: bold;
     border: none;
 }
 
 .login_form input[type=text] {
-    color: white;
+    color: black;
 }
 
 .login_form .lgn_button {
@@ -67,6 +66,7 @@
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
     margin-top: 1rem;
+    padding: 0.5vw;
     margin-bottom: 1rem;
     margin-left: 2rem;
     box-shadow: none;
@@ -90,20 +90,32 @@
 }
 
 ::placeholder {
-    color: white;
+    color: black;
 }
 
 .login_form .lgn_button:hover {
-    box-shadow: 10px 6px 6px #77ffc0;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     cursor: pointer;
 }
 
 .login_form input[type=submit]:hover {
     color: white;
+    background-color: rgb(56, 50, 50);
     cursor: pointer;
 }
 
 .login_form input[type=button]:hover {
-    color: white;
+    color: blue;
+    font-weight: bolder;
 }
 
+
+@media only screen and (max-width: 1058px) {
+    .login_form {
+      display: block;
+      text-align: center;
+    }
+    .login_inputs {
+        width: 100%;
+    }
+  }
